--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "[4,)"
+loaderVersion = "[47,)"
 license = "MIT"
 
 [[mods]]
@@ -15,19 +15,17 @@ issueTrackerURL = "https://github.com/cassiancc/Villager-Trading-Plus/issues"
 displayURL="https://modrinth.com/mod/trading+"
 modURL="https://modrinth.com/mod/trading+"
 
+
 [[dependencies.villager_trading_plus]]
-modId = "neoforge"
-type = "required"
-versionRange = "[21.0,)"
+modId = "forge"
+mandatory = true
+versionRange = "[47,)"
 ordering = "NONE"
 side = "CLIENT"
 
 [[dependencies.villager_trading_plus]]
 modId = "minecraft"
-type = "required"
-versionRange = "[1.21,)"
+mandatory = true
+versionRange = "[1.20.1,)"
 ordering = "NONE"
 side = "CLIENT"
-
-[[mixins]]
-config = "villagertrading.mixins.json"
