--- a/gradle.properties
+++ b/gradle.properties
@@ -3,20 +3,19 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 1.0+1.21
+mod_version = 1.0+1.20
 maven_group = cc.cassian
 archives_name = villager-trading-plus
-enabled_platforms = fabric,neoforge
+enabled_platforms = fabric,forge
 
 # Minecraft properties
-minecraft_version = 1.21.1
-yarn_mappings = 1.21.1+build.3
+minecraft_version = 1.20.1
+yarn_mappings = 1.20.1+build.10
 
 # Dependencies
 fabric_loader_version = 0.16.2
-fabric_api_version = 0.102.0+1.21.1
-neoforge_version = 21.1.24
-yarn_mappings_patch_neoforge_version = 1.21+build.4
-cloth_version=15.0.127
-modmenu_version=11.0.1
-architectury_api_version = 13.0.2
+fabric_api_version = 0.92.2+1.20.1
+forge_version = 1.20.1-47.2.32
+cloth_version=11.1.136
+modmenu_version=7.2.2
+architectury_api_version = 9.2.14
